--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.10",
+    "@tanstack/react-query": "^5.59.20",
+    "axios": "^1.7.7",
+    "crypto": "^1.0.1",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
