--- a/package.json
+++ b/package.json
@@ -3,30 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.1.10",
-    "@tanstack/react-query": "^5.59.20",
-    "axios": "^1.7.7",
+    "@headlessui/react": "2.2.0",
+    "@tanstack/react-query": "5.67.1",
+    "axios": "1.8.1",
     "crypto": "^1.0.1",
-    "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.3.0",
-    "swiper": "^11.1.14"
+    "next": "15.2.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-icons": "5.5.0",
+    "swiper": "11.2.5"
   },
   "devDependencies": {
     "@types/node": "^22.7.7",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^9.13.0",
-    "eslint-config-next": "14.2.15",
-    "postcss": "^8",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "eslint": "9.21.0",
+    "eslint-config-next": "15.2.1",
+    "postcss": "8.5.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.8.2"
+  },
+  "resolutions": {
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
   }
 }
