--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tanstack/react-query": "5.67.1",
     "axios": "1.8.1",
     "crypto": "^1.0.1",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.10.2",
     "next": "15.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
