--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "2.2.0",
     "@tanstack/react-query": "5.67.1",
     "axios": "1.8.1",
+    "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.10.2",
@@ -19,16 +20,18 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "5.5.0",
-    "swiper": "11.2.5"
+    "swiper": "11.2.5",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.12",
     "@types/node": "^22.7.7",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "eslint": "9.21.0",
     "eslint-config-next": "15.2.1",
     "postcss": "8.5.3",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.12",
     "typescript": "5.8.2"
   },
   "resolutions": {
