--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "flowbite-react patch"
   },
   "dependencies": {
     "@headlessui/react": "2.2.0",
@@ -15,13 +16,17 @@
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "flowbite": "^3.1.2",
-    "flowbite-react": "^0.10.2",
+    "flowbite-react": "^0.11.7",
     "next": "15.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-icons": "5.5.0",
+    "react-range": "^1.10.0",
     "swiper": "11.2.5",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "tailwind-scrollbar": "^4.0.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.12",
